collapse fixed

--- a/style.css
+++ b/style.css
@@ -218,11 +218,38 @@
     border: none;
 }
 
-@media (max-width: 1500px)  {
+#multiCollapseExample1 {
+    margin-right: 20px;
+    
+}
+
+@media (max-width: 420px)  {
     #multiCollapseExample1 {
+        margin-right: 0px;
+    }
+}
+
+@media screen and  (max-width: 1500px)  and (min-width: 420px)  {
+    #multiCollapseExample1 {
+      position:absolute;
+    
+  
+    }
+}
+
+@media screen and  (max-width: 1500px)  and (min-width: 420px)  {
+    #multiCollapseExample2 {
       position:absolute;
     }
 }
+
+@media screen and  (max-width: 1500px)  and (min-width: 420px)  {
+    #multiCollapseExample3 {
+      position:absolute;
+    }
+}
+
+
 
 
 /*End of services*/
